creating nlu engines at startup
