# skill-sdk/lib/server/api/controllers/converse.js
@@ -6,14 +6,20 @@
 'use strict';
 
 const {handler} = require('../../..');
+const manifest = require('../../../../../manifest');
 
 module.exports = {
-  post: post
+    post: post
 };
 
 function post(req, res) {
-  const request = req.swagger.params.input.value;
-  handler.handleRequest(request, (err, result) => {
-    res.json(result);
-  });
+    if (manifest.nlu.indexOf('skill') > -1) {
+        res.json(req.response);
+    }
+    else {
+        const request = req.swagger.params.input.value;
+        handler.handleRequest(request, (err, result) => {
+            res.json(result);
+        });
+    }
 }
